Update My Basic Website.html

--- a/My Basic Website.html
+++ b/My Basic Website.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kaden's Unblocked Games</title>
+    <title>Vnxz Is Cool</title>
   </head>
   <body>
     <h1>Welcome To Kaden's Unblocked Games</h1>
