--- a/My Basic Website.html
+++ b/My Basic Website.html
@@ -4,7 +4,7 @@
     <title>Vnxz Is Cool</title>
   </head>
   <body>
-    <h1>Welcome To Kaden's Unblocked Games</h1>
+    <h1>Vnxz Is Cool</h1>
     <p>HomePage</p>
     <a href="page1.html"><button>Contact</button></a>
     <a href="page2.html"><button>Games</button></a>
