--- a/page1.html
+++ b/page1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kaden's Unblocked Games</title>
+    <title>Vnxz = Kool</title>
   </head>
   <body>
     <h1>Contact</h1>
